# HDSDocs

./: .gitignore  README.md  pyproject.toml  zensical.toml
docs/: access.md  get-started.md
docs/analytical/: jupyterlab.md  vscode.md
docs/transfer/: filemail.md  sshfs.md
extra/: markdown.md
site/: 404.html  index.html  search.json
site/access/: index.html
site/analytical/: index.html
site/analytical/R/: index.html
site/analytical/jupyterlab/: index.html
site/analytical/vscode/: index.html
site/get-started/: index.html
site/platform/: index.html
site/ref/: index.html
site/technical/: index.html
site/technical/conda/: index.html
site/technical/podman/: index.html
site/technical/python/: index.html
site/technical/uv/: index.html
site/transfer/: index.html
site/transfer/filemail/: index.html
site/transfer/scp/: index.html
site/transfer/sshfs/: index.html
